--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "proto-topy"
-version = "1.0.0"
+version = "1.0.1"
 description = "Yet another tool that compiles .proto strings and import the outcome Python modules."
 requires-python = ">=3.8"
 license = {text = "MIT"}
@@ -32,8 +32,7 @@ homepage = "https://github.com/decitre/python-proto-topy"
 [project.optional-dependencies]
 dev = [
     "pytest", "pytest-recording", "urllib3<2",
-    "bumpver", "black@git+https://github.com/psf/black.git",
-    "ruff", "pre-commit", "tox"
+    "bumpver", "black", "ruff", "pre-commit", "tox"
 ]
 
 [tool.black]
@@ -56,7 +55,7 @@ inline-quotes = "double"
 max-complexity = 18
 
 [tool.bumpver]
-current_version = "1.0.0"
+current_version = "1.0.1"
 version_pattern = "MAJOR.MINOR.PATCH"
 commit_message = "bump version {old_version} -> {new_version}"
 commit = true
