--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,18 +8,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.11
+      - name: Set up
         uses: actions/setup-python@v5
         with:
           python-version: 3.11
       - name: Install tools
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel build twine
-      - name: Build the package
+          pip install '.[dev]'
+      - name: Build
         run: |
           python -m build --sdist --wheel
-      - name: Publish package
+      - name: Publish
         uses: pypa/gh-action-pypi-publish@release/v1
         # https://github.com/pypa/gh-action-pypi-publish
         with:
