--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
           pip install '.[dev]'
       - name: Build
         run: |
-          python -m build --sdist --wheel
+          python -m build
       - name: Publish
         uses: pypa/gh-action-pypi-publish@release/v1
         # https://github.com/pypa/gh-action-pypi-publish
