--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ macos-13, macos-14, macos-12 ]
+        os: [ ubuntu-latest, macos-13, windows-latest ]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
@@ -61,7 +61,7 @@ jobs:
       fail-fast: false
       matrix:
         # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
-        os: [macos-13, macos-14, macos-12]
+        os: [ ubuntu-latest, macos-13, windows-latest ]
         python: [ '3.10', '3.11']
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
@@ -87,6 +87,38 @@ jobs:
           pip install --upgrade pip
           pip install -e '.[ci]'
           protoc --version
+          pip freeze
+      - name: Setup test suite
+        run: tox -vv --notest
+      - name: Run test suite
+        run: tox --skip-pkg-install
+
+  py_3x_proto_25x:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+          architecture: x64
+          cache: pip
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: 25.x
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: install dependencies
+        run: |
+          pip install --upgrade pip
+          pip install -e '.[ci]'
+          pip --version
           pip freeze
       - name: Setup test suite
         run: tox -vv --notest
