--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
     rev: "v0.6.2"
     hooks:
       - id: ruff
+        args: [ 'check' ]
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.17.0
     hooks:
